--- a/arch/cpu/arm/Makefile.arm
+++ b/arch/cpu/arm/Makefile.arm
@@ -30,9 +30,10 @@ endif
 ### Pass CFLAGS along to assembly files in the build
 ASFLAGS += $(CFLAGS)
 ### Specify '-c' option to assemble only and not link
-ASFLAGS += -c 
+ASFLAGS += -c
 
 LDFLAGS += -mthumb -mabi=aapcs -mlittle-endian
+LDFLAGS += -specs=nosys.specs
 
 OBJDUMP_FLAGS += --disassemble --source --disassembler-options=force-thumb
 
@@ -52,7 +53,7 @@ endif
 CFLAGS += $(OPTIMIZATIONS)
 
 ### Use CMSIS from arch/cpu/arm/common
-CONTIKI_ARM_DIRS += . 
+CONTIKI_ARM_DIRS += .
 CONTIKI_CPU_DIRS += $(addprefix ../arm/, $(CONTIKI_ARM_DIRS))
 
 ### Default to use os/lib/dbg-io unless configured to do otherwise
